# cilantro

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  cilantro.sln
cilantro/: AnimationObject.cpp  AnimationObject.h  AnimationProperty.h  BSpline.h  CMakeLists.txt  CallbackProvider.h  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  FrameBufferRenderTarget.cpp  FrameBufferRenderTarget.h  GLFWInputController.cpp  GLFWInputController.h  GLFWRenderTarget.cpp  GLFWRenderTarget.h  GLFramebufferRenderTarget.cpp  GLFramebufferRenderTarget.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLShaderModel.cpp  GLShaderModel.h  GameLoop.cpp  GameLoop.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  Input.cpp  Input.h  InputAxis.cpp  InputAxis.h  InputController.cpp  InputController.h  InputEvent.cpp  InputEvent.h  Light.cpp  Light.h  (+49 more)
cilantro/include/: cilantroengine.h
cilantro/include/game/: Game.h  GameComposite.h  GameLoop.h
cilantro/include/graphics/: AABBRenderStage.h  DeferredGeometryRenderStage.h  DeferredLightingRenderStage.h  ForwardGeometryRenderStage.h  Framebuffer.h  GLDeferredGeometryRenderStage.h  GLDeferredRenderer.h  GLFWRenderTarget.h  GLFWRenderer.h  GLForwardGeometryRenderStage.h  GLForwardRenderer.h  GLFramebuffer.h  GLFramebufferRenderTarget.h  GLGeometryBuffer.h  GLGeometryRenderStage.h  GLMultisampleFramebuffer.h  GLPostProcess.h  GLPostprocess.h  GLQuadRenderStage.h  GLRenderStage.h  GLRenderer.h  GLShader.h  GLShaderModel.h  GLShaderProgram.h  GLUtils.h  GeometryBuffer.h  GeometryRenderStage.h  IFramebuffer.h  IRenderStage.h  IRenderer.h  IShader.h  IShaderProgram.h  PostProcess.h  Postprocess.h  QuadRenderStage.h  RenderStage.h  RenderTarget.h  Renderer.h  RendererComposite.h  Shader.h  (+14 more)
cilantro/include/input/: GLFWInputController.h  Input.h  InputController.h
cilantro/include/math/: AABB.h  BSpline.h  Bezier.h  CubicHermite.h  Curve.h  GaussLegendreIntegrator.h  Mathf.h  Matrix3f.h  Matrix4f.h  NURBS.h  Quaternion.h  Spline.h  Triangle.h  Vector2f.h  Vector3f.h  Vector4f.h
cilantro/include/resource/: AnimatedMesh.h  AssimpModelLoader.h  Bone.h  LoadableResource.h  Mesh.h  ModelLoader.h  Resource.h  ResourceManager.h  Texture.h
cilantro/include/scene/: AnimatedMeshObject.h  AnimationObject.h  AnimationProperty.h  Bone.h  BoneObject.h  Camera.h  DirectionalLight.h  GameObject.h  GameScene.h  Light.h  LinearPath.h  Material.h  MeshObject.h  OrthographicCamera.h  PBRMaterial.h  Path.h  PerspectiveCamera.h  PhongMaterial.h  PointLight.h  Primitives.h  SplinePath.h  SpotLight.h  Texture.h  Transform.h  Waypoint.h
cilantro/include/system/: CallbackProvider.h  EngineContext.h  Game.h  Hook.h  HookProvider.h  LogMessage.h  Message.h  MessageBus.h  Timer.h
cilantro/include/util/: CallbackProvider.h  LogMessage.h  Timer.h
cilantro/shaders/: aabb.cs  aabb.fs  aabb.vs  blinnphong.420.fs  blinnphong.fs  blinnphong_deferred_geometrypass.fs  blinnphong_deferred_lightingpass.fs  blinnphong_forward.fs  default.330.vs  default.vs  flatquad.330.vs  flatquad.fs  flatquad.vs  lightmap_forward.gs  lightmap_forward.vs  lights.fs  pbr.420.fs  pbr.fs  pbr_deferred_geometrypass.fs  pbr_deferred_lightingpass.fs  pbr_forward.fs  phong.420.fs  phong.fs  phong_forward.fs  post_fxaa.fs  post_gamma.fs  post_hdr.fs  shadowmap.fs  shadowmap.vs  shadowmap_directional.gs  shadowmap_point.gs  shadowmap_spot.gs  shadows.fs
cilantro/src/game/: Game.cpp  GameComposite.cpp  GameLoop.cpp
cilantro/src/graphics/: AABBRenderStage.cpp  DeferredGeometryRenderStage.cpp  DeferredLightingRenderStage.cpp  ForwardGeometryRenderStage.cpp  Framebuffer.cpp  GLDeferredGeometryRenderStage.cpp  GLDeferredRenderer.cpp  GLFWRenderTarget.cpp  GLFWRenderer.cpp  GLForwardGeometryRenderStage.cpp  GLForwardRenderer.cpp  GLFramebuffer.cpp  GLFramebufferRenderTarget.cpp  GLGeometryRenderStage.cpp  GLMultisampleFramebuffer.cpp  GLPostProcess.cpp  GLPostprocess.cpp  GLQuadRenderStage.cpp  GLRenderStage.cpp  GLRenderer.cpp  GLShader.cpp  GLShaderModel.cpp  GLShaderProgram.cpp  GLUtils.cpp  GeometryRenderStage.cpp  PostProcess.cpp  Postprocess.cpp  QuadRenderStage.cpp  RenderStage.cpp  RenderTarget.cpp  Renderer.cpp  RendererComposite.cpp  Shader.cpp  ShaderProcessor.cpp  ShaderProgram.cpp  ShadowMapRenderStage.cpp  SurfaceRenderStage.cpp
cilantro/src/input/: GLFWInputController.cpp  InputController.cpp
cilantro/src/math/: AABB.cpp  BSpline.cpp  Bezier.cpp  CubicHermite.cpp  Curve.cpp  GaussLegendreIntegrator.cpp  Mathf.cpp  Matrix3f.cpp  Matrix4f.cpp  NURBS.cpp  Quaternion.cpp  Spline.cpp  Triangle.cpp  Vector2f.cpp  Vector3f.cpp  Vector4f.cpp
cilantro/src/resource/: AnimatedMesh.cpp  AssimpModelLoader.cpp  Bone.cpp  LoadableResource.cpp  Mesh.cpp  ModelLoader.cpp  Resource.cpp  ResourceManager.cpp  Texture.cpp
cilantro/src/scene/: AnimatedMeshObject.cpp  AnimationObject.cpp  AnimationProperty.cpp  Bone.cpp  BoneObject.cpp  Camera.cpp  DirectionalLight.cpp  GameObject.cpp  GameScene.cpp  Light.cpp  LinearPath.cpp  Material.cpp  MeshObject.cpp  OrthographicCamera.cpp  PBRMaterial.cpp  Path.cpp  PerspectiveCamera.cpp  PhongMaterial.cpp  PointLight.cpp  Primitives.cpp  SplinePath.cpp  SpotLight.cpp  Texture.cpp  Transform.cpp  Waypoint.cpp
cilantro/src/system/: EngineContext.cpp  Game.cpp  LogMessage.cpp  MessageBus.cpp  Timer.cpp
cilantro/src/util/: LogMessage.cpp  Timer.cpp
example01/: CMakeLists.txt  RotatingCube.cpp  RotatingCube.h  RotatingObject.cpp  RotatingObject.h  example01.vcxproj  example01.vcxproj.filters  imgui.ini  main.cpp
example02/: CMakeLists.txt  Orbiter.cpp  Orbiter.h  example02.vcxproj  example02.vcxproj.filters  imgui.ini  main.cpp
python/: CMakeLists.txt  pycilantro.cpp
test01/: CMakeLists.txt  ControlledCamera.h  RotatingObject.cpp  RotatingObject.h  imgui.ini  main.cpp
test02/: CMakeLists.txt  Orbiter.cpp  Orbiter.h  (+2 more)
tests/: CMakeLists.txt  ControlledCamera.cpp  ControlledCamera.h  Orbiter.cpp  Orbiter.h  RotatingObject.cpp  RotatingObject.h  paths.py  test01.cpp  test01.py  test02.cpp  test03.cpp  test04.cpp
(+7 files in other folders)
