add_compile_definitions(BUILDING_DLL)

include_directories ("${PROJECT_SOURCE_DIR}/ext/glfw/include")
include_directories ("${PROJECT_SOURCE_DIR}/cilantro/include")

add_library(cilantro SHARED

include/cilantroengine.h

include/graphics/default.vs.h
include/graphics/flatquad.vs.h
include/graphics/normals.fs.h
include/graphics/phong.fs.h
include/graphics/blinnphong.fs.h
include/graphics/emissive.fs.h
include/graphics/flatquad.fs.h
include/graphics/post_gamma.fs.h

include/game/GameLoop.h
include/graphics/GLFramebuffer.h
include/graphics/GLFWRenderTarget.h
include/graphics/GLMultisampleFramebuffer.h
include/graphics/GLPostprocess.h
include/graphics/GLRenderer.h
include/graphics/GLShader.h
include/graphics/GLShaderProgram.h
include/graphics/Postprocess.h
include/graphics/Renderer.h
include/graphics/RenderTarget.h
include/graphics/Shader.h
include/graphics/ShaderProgram.h
include/input/GLFWInputController.h
include/input/InputController.h
include/input/Input.h
include/math/Bezier.h
include/math/BSpline.h
include/math/CubicHermite.h
include/math/Curve.h
include/math/GaussLegendreIntegrator.h
include/math/Mathf.h
include/math/Matrix3f.h
include/math/Matrix4f.h
include/math/NURBS.h
include/math/Quaternion.h
include/math/Vector3f.h
include/math/Vector4f.h
include/scene/AnimationObject.h
include/scene/AnimationProperty.h
include/scene/Camera.h
include/scene/DirectionalLight.h
include/scene/GameObject.h
include/scene/GameScene.h
include/scene/Light.h
include/scene/Material.h
include/scene/MeshObject.h
include/scene/OrthographicCamera.h
include/scene/PerspectiveCamera.h
include/scene/PointLight.h
include/scene/SpotLight.h
include/scene/Transform.h
include/util/CallbackProvider.h
include/util/LogMessage.h
include/util/Timer.h
src/game/GameLoop.cpp
src/graphics/GLFramebuffer.cpp
src/graphics/GLFWRenderTarget.cpp
src/graphics/GLMultisampleFramebuffer.cpp
src/graphics/GLPostprocess.cpp
src/graphics/GLRenderer.cpp
src/graphics/GLShader.cpp
src/graphics/GLShaderProgram.cpp
src/graphics/Postprocess.cpp
src/graphics/Renderer.cpp
src/graphics/RenderTarget.cpp
src/graphics/Shader.cpp
src/graphics/ShaderProgram.cpp
src/input/GLFWInputController.cpp
src/input/InputController.cpp
src/math/Bezier.cpp
src/math/BSpline.cpp
src/math/CubicHermite.cpp
src/math/Curve.cpp
src/math/GaussLegendreIntegrator.cpp
src/math/Mathf.cpp
src/math/Matrix3f.cpp
src/math/Matrix4f.cpp
src/math/NURBS.cpp
src/math/Quaternion.cpp
src/math/Vector3f.cpp
src/math/Vector4f.cpp
src/scene/AnimationObject.cpp
src/scene/AnimationProperty.cpp
src/scene/Camera.cpp
src/scene/DirectionalLight.cpp
src/scene/GameObject.cpp
src/scene/GameScene.cpp
src/scene/Light.cpp
src/scene/Material.cpp
src/scene/MeshObject.cpp
src/scene/OrthographicCamera.cpp
src/scene/PerspectiveCamera.cpp
src/scene/PointLight.cpp
src/scene/SpotLight.cpp
src/scene/Transform.cpp
src/util/LogMessage.cpp
src/util/Timer.cpp
)
